--- a/index.html
+++ b/index.html
@@ -423,6 +423,7 @@
                             <span class="project-tag">Retirement Planning</span>
                             <span class="project-tag">Excel</span>
                             <span class="project-tag">Financial Projection</span>
+                            <span class="project-tag">Python</span>
                         </div>
                     </div>
                 </div>
