--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
                 <h3 class="resume-category-title">Certifications</h3>
                 <ul class="resume-item" style="list-style-type: none; padding: 0;">
                     <li style="margin-bottom: 10px;">Finance Analytics (Citi Bank) - Completed</li>
-                    <li style="margin-bottom: 10px;">Bloomberg Market Concepts (BMC) - In Progress / Completed</li>
+                    <li style="margin-bottom: 10px;">Bloomberg Market Concepts (BMC) - Completed</li>
                     <li style="margin-bottom: 10px;">Corporate Finance Fundamentals (CFI) - In Progress / Completed</li>
                 </ul>
             </div>
