--- a/index.html
+++ b/index.html
@@ -435,7 +435,8 @@
         <div class="container">
             <h2 class="section-title">Resume</h2>
             <div style="text-align: center; margin-bottom: 30px;">
-                <!-- Make sure resume PDF is in an 'assets' folder relative to this HTML file -->
+                    <!-- Make sure resume PDF is in an 'assets' folder relative to this HTML file -->
+                    <!-- Test comment to trigger redeploy -->
                 <a href="assets/AMAN_VYAS_resume.pdf" class="download-resume-btn" download>Download Resume (PDF)</a>
             </div>
             
