--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
             <div style="text-align: center; margin-bottom: 30px;">
                     <!-- Make sure resume PDF is in an 'assets' folder relative to this HTML file -->
                     <!-- Test comment to trigger redeploy -->
-                <a href="assets/AmanVyas_Resume_Latest.pdf" class="download-resume-btn" download>Download Resume (PDF)</a>
+                <a href="assets/AMAN_VYAS_resume.pdf" class="download-resume-btn" download>Download Resume (PDF)</a>
             </div>
             
             <div class="resume-section-content">
